--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.184",
+    "@types/lodash-es": "^4.17.6",
     "@types/uuid": "^8.3.4",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
