--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "proper",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@kashuab/sui",
+  "description": "Simple client-side UI framework for JavaScript.",
+  "repository": "https://github.com/KashubaK/sui",
+  "author": {
+    "name": "Kyle Kashuba",
+    "url": "https://github.com/KashubaK"
+  },
+  "version": "0.1.0",
+  "main": "dist/sui.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "analyze": "ANALYZE_BUNDLE=true yarn build"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^4.0.0",
     "@types/lodash": "^4.14.184",
     "@types/lodash-es": "^4.17.6",
-    "@types/uuid": "^8.3.4",
+    "@types/node": "^18.7.15",
+    "rollup-plugin-visualizer": "^5.8.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
   },
   "dependencies": {
     "lodash-es": "^4.17.21",
-    "mobx": "^6.6.1",
-    "uuid": "^8.3.2"
+    "mobx": "^6.6.1"
   }
 }
