--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "name": "Kyle Kashuba",
     "url": "https://github.com/KashubaK"
   },
-  "version": "0.2.1",
+  "version": "0.3.0",
   "main": "dist/sui.js",
   "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
+    "type-check":  "tsc --noEmit --emitDeclarationOnly false",
     "dev": "vite",
     "build-types": "tsc",
     "build": "tsc && vite build",
